# ResearchFlow-AI-Advanced-RAG-Based-Research-Question-Answering-System--Multiple-Papers-

./: .gitignore  README.md  config.py  main.py  metadata_extractor.py  pyproject.toml  render.yaml
backend/: api.py  config.py  main.py  metadata_extractor.py  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatPanel.jsx  CitedPapers.jsx  Header.jsx  UploadZone.jsx
